# raylibstarter-letterboxed

./: CMakeLists.txt  config.h.in
Aufgabe1ab/: CMakeLists.txt  GameObject.h  main.cpp
Aufgabe1ab/World/: Map.cpp  Map.h  World.h
Aufgabe1c/: CMakeLists.txt
Aufgabe1c/Items/: BaseItem.h  Coffee.cpp  Coffee.h
Aufgabe1c/UI/: Menu.cpp
Aufgabe1c/World/: Map.cpp  Map.h  World.cpp
Aufgabe2a/: CMakeLists.txt  RaylibHelp.h  Sprite.h  main.cpp
Aufgabe2a/Exceptions/: EquipmentError.h  SlotIsEmpty.cpp  SlotIsEmpty.h  UnequipError.cpp  UnequipError.h
Aufgabe2a/Inventory/: Inventory.h  Inventory.hpp
Aufgabe2a/Items/: BaseItem.h  Coffee.cpp
Aufgabe2a/Items/Equipment/: EquippableItem.h  Hat.h  Honey.h  Shoes.cpp  Shoes.h
Aufgabe2a/UI/: InventoryUI.cpp  InventoryUI.h  Menu.h
Aufgabe2a/World/: Map.cpp  Map.h  World.cpp  World.h
Aufgabe2b/: CMakeLists.txt  RaylibHelp.h  Sprite.h  main.cpp
Aufgabe2b/Character/: BaseChar.cpp  BaseChar.h  PlayerChar.cpp  PlayerChar.h
Aufgabe2b/Exceptions/: InventoryFull.cpp  InventoryFull.h
Aufgabe2b/Inventory/: Inventory.h  Inventory.hpp
Aufgabe2b/Items/: BaseItem.h  Coffee.cpp  Coffee.h  Steak.h
Aufgabe2b/Items/Equipment/: EquippableItem.cpp  EquippableItem.h  Hat.h  Honey.cpp  Honey.h  Shoes.h
Aufgabe2b/UI/: InventoryUI.cpp  InventoryUI.h  Menu.h
Aufgabe2b/World/: Map.cpp  Map.h  World.cpp  World.h
Aufgabe3a/: CMakeLists.txt
Aufgabe3a/Algorithm/: Bubblesort.hpp
Aufgabe3a/Character/: BaseChar.h  PlayerChar.cpp  PlayerChar.h
Aufgabe3a/Exceptions/: OutOfRange.cpp
Aufgabe3a/Inventory/: Inventory.h  Inventory.hpp
Aufgabe3a/Items/: BaseItem.h  Coffee.h  Fish.cpp  Fish.h  Steak.cpp  Steak.h
Aufgabe3a/Items/Equipment/: Honey.h  Shoes.h
Aufgabe3a/UI/: InventoryUI.cpp  InventoryUI.h  Menu.cpp
Aufgabe3a/World/: Map.cpp  Map.h  Tiles.cpp
Aufgabe4/: CMakeLists.txt  Sprite.cpp  config.h.in
Aufgabe4/Algorithm/: AStarPathfinding.cpp  AStarPathfinding.h  Bubblesort.hpp  ItemComparators.hpp  Node.h
Aufgabe4/Character/: BaseChar.h  PlayerChar.cpp  PlayerChar.h
Aufgabe4/Exceptions/: OutOfRange.h
Aufgabe4/Inventory/: Inventory.hpp
Aufgabe4/Items/: Coffee.cpp  Steak.h  Stick.h
Aufgabe4/Items/Equipment/: Hat.cpp
Aufgabe4/UI/: Menu.cpp  Menu.h
Aufgabe4/World/: Map.cpp  Map.h  Path.cpp  Path.h  Tiles.h  World.cpp  World.h
Aufgabe5/: CMakeLists.txt  Enums.h  Helper.h  Sprite.h  main.cpp
Aufgabe5/Algorithm/: AStarPathfinding.cpp  AStarPathfinding.h  Node.h
Aufgabe5/Character/: BaseChar.cpp  BaseChar.h  NonPlayerChar.cpp  NonPlayerChar.h  PlayerChar.cpp  PlayerChar.h
Aufgabe5/Exceptions/: EquipmentError.cpp  EquipmentError.h
Aufgabe5/Inventory/: Inventory.h  Inventory.hpp
Aufgabe5/Items/: BaseItem.h  Coffee.h  Fish.h  Stick.cpp  Stick.h
Aufgabe5/Items/Equipment/: Hat.h  Honey.h  MysticalHoney.cpp  MysticalHoney.h
Aufgabe5/UI/: GameOver.cpp  GameOver.h  InventoryUI.cpp  InventoryUI.h
Aufgabe5/World/: Map.cpp  Map.h  World.cpp  World.h
